# financial_agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: Gastos fijos.xlsx  estado de cuenta.xlsx  facturas(1).xlsx
data_cleaned/: Estado_cuenta_cleaned.csv  estado_de_cuenta_cleaned.csv  facturas(1)_cleaned.csv  facturas_cleaned.csv  gastos_fijos_cleaned.csv
src/: main.py
src/agents/: __init__.py  data_cleaner_agent.py  simple_search_agent.py
src/tools/: __init__.py  data_cleaning_tools.py
