[project]
name = "financial-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.7",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.42",
    "openpyxl>=3.1.0",
    "fastapi[standard]>=0.116.1",
]
